--- a/templates/menues.html
+++ b/templates/menues.html
@@ -279,26 +279,6 @@
                         <a href="{% url 'saldos_proveedores' %}"><i class="icon-bar-chart"></i>Saldos Proveedores</a>
                       </li>
                       {% endif %}                                                              
-                      {% if 'rep_varios' in permisos_grupo %} 
-                      <li>
-                        <h3>REPORTES VARIOS</h3>
-                      </li>                      
-                      <li>
-                        <a href="{% url 'vencimientos_cpbs' %}"><i class="icon-bar-chart"></i>Consulta Comprobantes</a>
-                      </li>
-                      <li>
-                        <a href="{% url 'movimientos_stock' %}"><i class="icon-bar-chart"></i>Movimientos Productos/Stock</a>
-                      </li>
-                      <li>
-                        <a href="{% url 'rankings' %}"><i class="icon-bar-chart"></i>Estadísticas Ventas/Compras</a>
-                      </li>
-                      {% endif %} 
-                    {% endif %} 
-                    </ul>
-                  </div>
-                {% endif %}                
-                  <div class="col-sm-6">
-                    <ul class="mega-menu-submenu">
                       {% if permisos_rep_contables %}
                       <li>
                         <h3>REPORTES CONTABLES</h3>
@@ -320,7 +300,35 @@
                       </li> 
                       {% endif %}
                      {% endif %}
-                     {% if permisos_rep_finanzas %}
+
+                      
+
+
+                    {% endif %} 
+                    </ul>
+                  </div>
+                {% endif %}                
+                  <div class="col-sm-6">
+                    <ul class="mega-menu-submenu">
+                      {% if 'rep_varios' in permisos_grupo %} 
+                      <li>
+                        <h3>REPORTES VARIOS</h3>
+                      </li>                      
+                      <li>
+                        <a href="{% url 'vencimientos_cpbs' %}"><i class="icon-bar-chart"></i>Consulta Comprobantes</a>
+                      </li>
+                      <li>
+                        <a href="{% url 'movimientos_stock' %}"><i class="icon-bar-chart"></i>Movimientos Productos/Stock</a>
+                      </li>
+                      <li>
+                        <a href="{% url 'rankings' %}"><i class="icon-bar-chart"></i>Estadísticas Ventas/Compras</a>
+                      </li>
+                      <li>
+                        <a href="{% url 'costo_producto_vendido' %}"><i class="icon-bar-chart"></i>Reporte Costos x Ventas</a>
+                      </li>
+                      {% endif %} 
+
+                      {% if permisos_rep_finanzas %}
                       <li>
                         <h3>REPORTES FINANZAS</h3>
                       </li>                      
@@ -339,6 +347,8 @@
                         <a href="{% url 'seguimiento_cheques' %}"><i class="icon-bar-chart"></i>Seguimiento Cheques</a>
                       </li>
                       {% endif %}                 
+
+                     
                       {% endif %}
                     </ul>
                   </div> 
