--- a/templates/productos/producto_form.html
+++ b/templates/productos/producto_form.html
@@ -87,10 +87,10 @@
 										                    <thead>
 										                          <tr>
 										                              <th style="width: 20%;">Lista</th>						                          						
-										                              <th style="width: 15%;" title="Precio de Costo" >Costo</th>											
-										                              <th style="width: 15%;" title="Precio de Costo con Impuestos" >Costo c/Imp.</th>						
+										                              <th style="width: 15%;" title="Precio de Costo" >P.Costo s/IVA</th>											
+										                              <th style="width: 15%;" title="Precio de Costo con Impuestos" >P.Costo c/Imp.</th>						
 										                              <th style="width: 5%;" title="Coeficiente de Ganancia (1=100%)" >Coef.Gan.</th>						
-										                              <th style="width: 15%;" title="Precio de Venta (Costo c/Imp * Coef.Gan.)" >Venta</th>
+										                              <th style="width: 15%;" title="Precio de Venta (Costo c/Imp * Coef.Gan.)">P.Venta</th>
 										                              
 										                              <th class="remove-sorting"></th>
 										                          </tr>
