--- a/staticfiles/css/components.css
+++ b/staticfiles/css/components.css
@@ -1151,7 +1151,7 @@ name .popover .popover-content,
 .portlet.solid > .portlet-title > .actions{padding:12px 0 6px 0;}
 .portlet.solid > .portlet-title > .tools{padding:14px 0 6px 0;}
 .portlet.solid.bordered > .portlet-title{margin-bottom:10px;}
-.portlet.box{padding:0px !important;margin-top:5px;}
+.portlet.box{padding:0px !important;margin-top:5px;box-shadow: 0px 0px 8px #888;}
 .portlet.box > .portlet-title{border-bottom:0;padding:0 10px;margin-bottom:0;color:#fff;}
 .portlet.box > .portlet-title > .caption{padding:11px 0 9px 0;}
 .portlet.box > .portlet-title > .tools > a.remove{background-image:url(../img/portlet-remove-icon-white.png);}
