--- a/templates/menues.html
+++ b/templates/menues.html
@@ -326,6 +326,9 @@
                       <li>
                         <a href="{% url 'costo_producto_vendido' %}"><i class="icon-bar-chart"></i>Reporte Costos x Ventas</a>
                       </li>
+                      <li>
+                        <a href="{% url 'comisiones_vendedores' %}"><i class="icon-bar-chart"></i>Comisiones x Ventas</a>
+                      </li>
                       {% endif %} 
 
                       {% if permisos_rep_finanzas %}
