--- a/templates/ingresos/presupuesto/cpb_presup_form.html
+++ b/templates/ingresos/presupuesto/cpb_presup_form.html
@@ -88,11 +88,11 @@
 						                              <th style="width: 20%;">Detalle</th>
 						                              <th style="width: 15px;">Cantidad</th>
 						                              <th style="width: 5%;"></th>
-						                              <th style="width: 80px;">Precio</th>
+						                              <th style="width: 70px;">Precio <i id="tit_precio" class="fa fa-question-circle recargarDatos" data-toggle="tooltip" data-placement="top" title="Precio"/></th>
 						                              <th style="width: 35px;">% Dcto.</th>
-						                              <th class="segunLetra" style="width: 60px;">Importe</th>
-						                              <th class="segunLetra" style="width: 60px;">IVA</th>
-						                              <th style="width: 60px;">Total</th>
+						                              <th class="segunLetra" style="width: 60px;">Importe <i class="fa fa-question-circle recargarDatos" data-toggle="tooltip" data-placement="top" title="Importe Subtotal"/></th>
+						                              <th class="segunLetra" style="width: 60px;">IVA <i class="fa fa-question-circle recargarDatos" data-toggle="tooltip" data-placement="top" title="Cálculo del IVA sobre el Importe (según producto)"/></th>
+						                              <th style="width: 60px;">Total <i id="tit_total" class="fa fa-question-circle recargarDatos" data-toggle="tooltip" data-placement="top" title="Suma del Importe + IVA"/></th>
 						                              <th style="width: 10px;" class="remove-sorting"></th>
 						                          </tr>
 						                    </thead>					                    
