--- a/templates/productos/nuevo_stock.html
+++ b/templates/productos/nuevo_stock.html
@@ -21,7 +21,8 @@
                           <div class="col-xs-12"> 
                            <div class=" col-sm-5">{% bootstrap_field form.ubicacion %}</div> 
                            <div class=" col-sm-5">{% bootstrap_field form.producto %}</div> 
-                           <div class=" col-sm-2">{% bootstrap_field form.valor %}</div>                             
+                           <div class=" col-sm-1">{% bootstrap_field form.valor %}</div>                             
+                           <div class=" col-sm-1">{% bootstrap_field form.ppedido %}</div>
                           </div>
                       </div>
                 </div>
