--- a/templates/productos/producto_form.html
+++ b/templates/productos/producto_form.html
@@ -33,12 +33,12 @@
 					     {% csrf_token %}                 
 					       	<div class="row">
    								<div class="col-xs-12">
-	   								  <div class="row ">
+	   								  <div class="row cerca">
 											<div class="col-sm-2">{% bootstrap_field form.codigo %}</div>									
 											<div class="col-sm-6">{% bootstrap_field form.nombre %}</div>
 											<div class="col-sm-4">{% bootstrap_field form.codigo_barras %}</div>																		  
 									  </div>
-									  <div class="row ">
+									  <div class="row cerca">
 								       	<div class="col-sm-3">{% bootstrap_field form.categoria %}</div>
 								       	<div class="col-sm-3">{% bootstrap_field form.tipo_producto %}</div>										     
 								       	<div class="col-sm-2">{% bootstrap_field form.mostrar_en %}</div>
@@ -56,10 +56,11 @@
 												       	{% bootstrap_field form.stock_negativo show_label=False %}
 												       </div>
 												       <div class="col-sm-9 col-xs-12">
-										                <div class="row ">
+										                <div class="row">
 													       	{% if form.tipo_form.value == 'ALTA' %}
-										                	<div class="col-sm-10">{% bootstrap_field form.ubicacion %}</div>
-													       	<div class="col-sm-2">{% bootstrap_field form.stock %}</div>
+										                	<div class="col-sm-6 cerca">{% bootstrap_field form.ubicacion %}</div>
+										                	<div class="col-sm-3 cerca">{% bootstrap_field form.stock %}</div>
+													       	<div class="col-sm-3 cerca">{% bootstrap_field form.ppedido %}</div>
 											                {% else %}
 											                <div class="col-sm-12"><h4 class="text-center">EL STOCK YA FUÉ INICIALIZADO</h4></div>
 											                {% endif %}		
