--- a/templates/productos/producto_stock.html
+++ b/templates/productos/producto_stock.html
@@ -47,6 +47,7 @@
                 <th class="imprimir text-center">Lleva Stock</th>
                 <th class="imprimir text-right">Stock</th>
                 <th class="imprimir text-left">Unidad</th>
+                <th class="imprimir text-right">PuntoPedido</th>
                                                                                                               
             </tr>
         </thead>
@@ -54,6 +55,8 @@
             {% for pp in productos %}
                 <tr  {% if pp.producto.baja %}
                 class='danger'
+                {% elif pp.get_reposicion %}
+                class='warning'                
              {% endif %}>                                                                                                                            
                     <td title="{{pp.pk|safe}}" class="no-sort text-center"></td>
                     <td class="text-center">
@@ -64,8 +67,9 @@
                     <td>{{ pp.producto.categoria|default_if_none:'' }}</td>                                
                     <td>{{ pp.producto.get_tipo_producto_display|default_if_none:'' }}</td>
                      <td class="text-center">{% if pp.producto.llevar_stock %}<i class="fa fa-check text-success"></i>{% endif %}</td>
-                    <td class="importe_total">{{pp.get_stock|default_if_none:0|floatformat:2}}</td>
+                    <td class="importe_total">{% if pp.producto.llevar_stock %}{{pp.get_stock|default_if_none:0|floatformat:2}}{% else %}-{% endif %}</td>
                     <td class="text-left">[{{pp.producto.get_unidad_display|default_if_none:''}}]</td>
+                    <td class="importe_total">{{pp.punto_pedido|default_if_none:0|floatformat:2}}</td>
                 </tr>
             {% endfor %}                        
         </tbody>
@@ -78,7 +82,8 @@
                 <th></th>                                                                 
                 <th></th>       
                 <th class="importe_total"></th>   
-                <th class="text-left"></th>                                 
+                <th class="text-left"></th> 
+                <th></th>                                   
 
             </tr>
         </tfoot>
