ppedido en busqueda stock

--- a/templates/productos/producto_stock.html
+++ b/templates/productos/producto_stock.html
@@ -26,6 +26,7 @@
                 <div class="col-sm-2">{% bootstrap_field form.categoria  %}</div>                                    
                 <div class="col-sm-2">{% bootstrap_field form.tipo_prod  %}</div>
                 <div class="col-sm-1">{% bootstrap_field form.lleva_stock  %}</div>                                           
+                <div class="col-sm-1">{% bootstrap_field form.stock_pp  %}</div> 
                 <div class="col-sm-1"><button style="float:left;margin-left:20px;" class="btn btn-sm green-meadow" type="submit">Buscar</button></div>
             </div>     
             </form>         
