--- a/templates/egresos/compras/cpb_compra_form.html
+++ b/templates/egresos/compras/cpb_compra_form.html
@@ -96,7 +96,7 @@
 									                    	title="Recargar listados de Productos"><i class="fa fa-refresh"></i></a>
 									                    
 						                              	</th>						                          						
-						                              <th style="width: 20%;">Detalle</th>
+						                              {% if not empresa.usa_impuestos %}<th style="width: 20%;">Detalle</th>{% endif %}
 						                              <th style="width: 15px;">Cantidad</th>
 						                              <th style="width: 5%;"></th>
 						                              <th style="width: 80px;">Precio</th>
@@ -115,7 +115,7 @@
 							                      	
 							                      	<tr class="{{ compras_detalle.prefix }}">           					                      	
 								                      	<td>{% bootstrap_field form2.producto show_label=False%}</td>
-								                      	<td>{% bootstrap_field form2.detalle show_label=False%}</td>
+								                      	{% if not empresa.usa_impuestos %}<td>{% bootstrap_field form2.detalle show_label=False%}</td>{% endif %}
 								                      	<td>{% bootstrap_field form2.cantidad show_label=False%}</td>
 								                      	<td class="unidades">{% bootstrap_field form2.unidad show_label=False%}</td>
 								                      	<td>{% bootstrap_field form2.importe_unitario show_label=False%}</td>
@@ -226,9 +226,9 @@
 							         	 {% if empresa.usa_impuestos %}
 							         	 <div class="row">
 							             	<div class="col-sm-3 col-xs-7"><span class="totales_comprobante">Total ITC</span></div> 
-							             	<div class="col-sm-3 col-xs-5">{% bootstrap_field form.importe_tot_tasa1 show_label=False%}</div> 
+							             	<div class="col-sm-3 col-xs-5">{% bootstrap_field form.importe_tasa1 show_label=False%}</div> 
 							             	<div class="col-sm-3 col-xs-7"><span class="totales_comprobante">Total TH</span></div> 
-							             	<div class="col-sm-3 col-xs-5">{% bootstrap_field form.importe_tot_tasa2 show_label=False%}</div> 
+							             	<div class="col-sm-3 col-xs-5">{% bootstrap_field form.importe_tasa2 show_label=False%}</div> 
 							         	 </div>
 							         	 {% endif %}
 							         </div>
