--- a/templates/reportes/contables/libro_iva_compras.html
+++ b/templates/reportes/contables/libro_iva_compras.html
@@ -184,9 +184,9 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                                             if (typeof i === "number") {
                                                 return i;
                                             } else if (typeof i === "string") {
-                                                i = i.replace("$", "")
-                                                i = i.replace(",", "")
-                                                i = i.replace(".", "")
+                                                i = i.replace(/\$/g, "");
+                    i = i.replace(/\,/g ,"");                    
+                    i = i.replace(/\./g, "");
                                                 var result = parseFloat(i)/100;
                                                 // console.log(result);
                                                 if (isNaN(result)) {
@@ -258,9 +258,9 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                 if (typeof i === "number") {
                     return i;
                 } else if (typeof i === "string") {
-                    i = i.replace("$", "")
-                    i = i.replace(",", "")
-                    i = i.replace(".", "")
+                    i = i.replace(/\$/g, "");
+                    i = i.replace(/\,/g ,"");                    
+                    i = i.replace(/\./g, "");
                     var result = parseFloat(i)/100;
                     // console.log(result);
                     if (isNaN(result)) {
@@ -281,17 +281,17 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                 }
             };
             pageTotal = api.column(4, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(4).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(4).footer() ).html('$'+pageTotal.toLocaleString());
             pageTotal = api.column(5, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(5).footer() ).html('$'+pageTotal.toFixed(2));      
+            $( api.column(5).footer() ).html('$'+pageTotal.toLocaleString());      
             pageTotal = api.column(6, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(6).footer() ).html('$'+pageTotal.toFixed(2));      
+            $( api.column(6).footer() ).html('$'+pageTotal.toLocaleString());      
             pageTotal = api.column(7, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(7).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(7).footer() ).html('$'+pageTotal.toLocaleString());
             pageTotal = api.column(8, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(8).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(8).footer() ).html('$'+pageTotal.toLocaleString());
             pageTotal = api.column(9, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(9).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(9).footer() ).html('$'+pageTotal.toLocaleString());
             
           
                  
