--- a/templates/egresos/ordenpago/cpb_rec_pago_listado.html
+++ b/templates/egresos/ordenpago/cpb_rec_pago_listado.html
@@ -204,9 +204,9 @@ var tabla = $('#dataTables-pagos').DataTable({
                                             if (typeof i === "number") {
                                                 return i;
                                             } else if (typeof i === "string") {
-                                                i = i.replace("$", "")
-                                                i = i.replace(",", "")
-                                                i = i.replace(".", "")
+                                                i = i.replace(/\$/g, "");
+                    i = i.replace(/\,/g ,"");                    
+                    i = i.replace(/\./g, "");
                                                 var result = parseFloat(i)/100;
                                                 // console.log(result);
                                                 if (isNaN(result)) {
@@ -264,9 +264,9 @@ var tabla = $('#dataTables-pagos').DataTable({
                 if (typeof i === "number") {
                     return i;
                 } else if (typeof i === "string") {
-                    i = i.replace("$", "")
-                    i = i.replace(",", "")
-                    i = i.replace(".", "")
+                    i = i.replace(/\$/g, "");
+                    i = i.replace(/\,/g ,"");                    
+                    i = i.replace(/\./g, "");
                     var result = parseFloat(i)/100;
                     // console.log(result);
                     if (isNaN(result)) {
@@ -287,11 +287,11 @@ var tabla = $('#dataTables-pagos').DataTable({
                 }
             };
             pageTotal = api.column(4, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(4).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(4).footer() ).html('$'+pageTotal.toLocaleString());
             pageTotal = api.column(5, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(5).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(5).footer() ).html('$'+pageTotal.toLocaleString());
             pageTotal = api.column(6, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(6).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(6).footer() ).html('$'+pageTotal.toLocaleString());
         }
         });
 
