--- a/templates/egresos/remitos/cpb_remito_listado.html
+++ b/templates/egresos/remitos/cpb_remito_listado.html
@@ -175,9 +175,9 @@ var tabla = $('#dataTables-cpb_remito').DataTable({
                                             if (typeof i === "number") {
                                                 return i;
                                             } else if (typeof i === "string") {
-                                                i = i.replace("$", "")
-                                                i = i.replace(",", "")
-                                                i = i.replace(".", "")
+                                                i = i.replace(/\$/g, "");
+                    i = i.replace(/\,/g ,"");                    
+                    i = i.replace(/\./g, "");
                                                 var result = parseFloat(i)/100;
                                                 // console.log(result);
                                                 if (isNaN(result)) {
