--- a/templates/reportes/contables/libro_iva_ventas.html
+++ b/templates/reportes/contables/libro_iva_ventas.html
@@ -189,9 +189,9 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                                             if (typeof i === "number") {
                                                 return i;
                                             } else if (typeof i === "string") {
-                                                i = i.replace("$", "")
-                                                i = i.replace(",", "")
-                                                i = i.replace(".", "")
+                                                i = i.replace(/\$/g, "");
+                    i = i.replace(/\,/g ,"");                    
+                    i = i.replace(/\./g, "");
                                                 var result = parseFloat(i)/100;
                                                 // console.log(result);
                                                 if (isNaN(result)) {
@@ -263,9 +263,9 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                 if (typeof i === "number") {
                     return i;
                 } else if (typeof i === "string") {
-                    i = i.replace("$", "")
-                    i = i.replace(",", "")
-                    i = i.replace(".", "")
+                    i = i.replace(/\$/g, "");
+                    i = i.replace(/\,/g ,"");                    
+                    i = i.replace(/\./g, "");
                     var result = parseFloat(i)/100;
                     // console.log(result);
                     if (isNaN(result)) {
@@ -287,21 +287,21 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
             };
             
             pageTotal = api.column(5, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(5).footer() ).html('$'+pageTotal.toFixed(2));    
+            $( api.column(5).footer() ).html('$'+pageTotal.toLocaleString());    
             pageTotal = api.column(6, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(6).footer() ).html('$'+pageTotal.toFixed(2)); 
+            $( api.column(6).footer() ).html('$'+pageTotal.toLocaleString()); 
           
             pageTotal = api.column(7, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(7).footer() ).html('$'+pageTotal.toFixed(2));      
+            $( api.column(7).footer() ).html('$'+pageTotal.toLocaleString());      
             
             pageTotal = api.column(8, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(8).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(8).footer() ).html('$'+pageTotal.toLocaleString());
             
             pageTotal = api.column(9, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(9).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(9).footer() ).html('$'+pageTotal.toLocaleString());
             
             pageTotal = api.column(10, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(10).footer() ).html('$'+pageTotal.toFixed(2));
+            $( api.column(10).footer() ).html('$'+pageTotal.toLocaleString());
             
             
              
