--- a/templates/reportes/cta_cte/cta_cte_clientes.html
+++ b/templates/reportes/cta_cte/cta_cte_clientes.html
@@ -197,9 +197,9 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                                             if (typeof i === "number") {
                                                 return i;
                                             } else if (typeof i === "string") {
-                                                i = i.replace("$", "")
-                                                i = i.replace(",", "")
-                                                i = i.replace(".", "")
+                                                i = i.replace(/\$/g, "");
+                    i = i.replace(/\,/g ,"");                    
+                    i = i.replace(/\./g, "");
                                                 var result = parseFloat(i)/100;
                                                 // console.log(result);
                                                 if (isNaN(result)) {
@@ -249,9 +249,9 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                 if (typeof i === "number") {
                     return i;
                 } else if (typeof i === "string") {
-                    i = i.replace("$", "")
-                    i = i.replace(",", "")
-                    i = i.replace(".", "")
+                    i = i.replace(/\$/g, "");
+                    i = i.replace(/\,/g ,"");                    
+                    i = i.replace(/\./g, "");
                     var result = parseFloat(i)/100;
                     // console.log(result);
                     if (isNaN(result)) {
@@ -274,11 +274,11 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                         
             
             pageTotal1 = api.column(4, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(4).footer() ).html('$'+pageTotal1.toFixed(2));
+            $( api.column(4).footer() ).html('$'+pageTotal1.toLocaleString());
             pageTotal2 = api.column(5, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(5).footer() ).html('$'+pageTotal2.toFixed(2));            
+            $( api.column(5).footer() ).html('$'+pageTotal2.toLocaleString());            
             pageTotal = pageTotal1 - pageTotal2;
-            $( api.column(6).footer() ).html('$'+pageTotal.toFixed(2));       
+            $( api.column(6).footer() ).html('$'+pageTotal.toLocaleString());       
             },
                                   
         });
