libro iva impuestos

--- a/templates/general/empresas/empresa_form.html
+++ b/templates/general/empresas/empresa_form.html
@@ -134,6 +134,9 @@
 															<div class="row cerca">
 																<div class="col-sm-12">{% bootstrap_field form.fp_facturas  %}</div>
 															</div>			
+															<div class="row cerca">
+																<div class="col-sm-12">{% bootstrap_field form.usa_impuestos  %}</div>
+															</div>
 														</div>
 													</div>
 														<div class="row cerca">
@@ -148,7 +151,6 @@
 																<label class="control-label col-sm-6">Ruta Logo en Factura:</label>
 																<div class="col-sm-6">{% bootstrap_field form.ruta_logo show_label=False  %}</div>		
 														</div>															
-													
 									       		   	
 									       		   </div>
 									       		</fieldset>	
