--- a/templates/ingresos/ventas/cpb_venta_form.html
+++ b/templates/ingresos/ventas/cpb_venta_form.html
@@ -101,7 +101,7 @@
 									                    		title="Recargar listados de Productos"><i class="fa fa-refresh"></i></a>
 									                    	{% endif %}
 									                  </th>						                          												
-						                              <th style="width: 20%;">Detalle</th>
+						                              {% if not empresa.usa_impuestos %}<th style="width: 20%;">Detalle</th>{% endif %}
 						                              <th style="width: 20px;">Cant.</th>
 						                              <th style="width: 20px;"></th>
 						                              <th style="width: 70px;">Precio <i id="tit_precio" class="fa fa-question-circle recargarDatos" data-toggle="tooltip" data-placement="top" title="Precio"/></th>
@@ -120,7 +120,7 @@
 							                      	{{ form2.non_field_errors }}					                      								                      	
 							                      	<tr class="{{ ventas_detalle.prefix }}">           			
 							                      		<td>{% bootstrap_field form2.producto show_label=False%}</td>
-								                      	<td>{% bootstrap_field form2.detalle show_label=False%}</td>
+								                      	{% if not empresa.usa_impuestos %}<td>{% bootstrap_field form2.detalle show_label=False%}</td>{% endif %}
 								                      	<td>{% bootstrap_field form2.cantidad show_label=False%}</td>
 								                      	<td>{% bootstrap_field form2.unidad show_label=False%}</td>
 								                      	<td>{% bootstrap_field form2.importe_unitario show_label=False%}</td>
